--- a/debian/control.in
+++ b/debian/control.in
@@ -5,7 +5,9 @@ Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.
 Uploaders: @GNOME_TEAM@, Ari Pollak <ari@debian.org>
 Build-Depends: debhelper (>= 11),
                dh-python,
+               gegl (>= 0.3.30),
                gettext,
+               glib-networking,
                gnome-pkg-tools,
                gtk-doc-tools (>= 1.0),
                intltool (>= 0.40.1),
@@ -13,33 +15,38 @@ Build-Depends: debhelper (>= 11),
                libaa1-dev,
                libasound2-dev (>= 1.0.0) [linux-any],
                libatk1.0-dev (>= 2.2.0),
-               libbabl-dev (>= 0.1.10),
+               libbabl-dev (>= 0.1.44),
                libbz2-dev,
-               libcairo2-dev (>= 1.10.2),
+               libcairo2-dev (>= 1.12.2),
                libcurl4-gnutls-dev (>= 7.15.1),
                libdbus-glib-1-dev (>= 0.70),
                libexif-dev (>= 0.6.15),
                libfreetype6-dev (>= 2.2),
-               libfontconfig1-dev (>= 2.2.0),
-               libglib2.0-dev (>= 2.30.2),
+               libfontconfig1-dev (>= 2.12.4),
+               libgexiv2-dev (>= 0.10.6),
+               libglib2.0-dev (>= 2.54.2),
                libglib2.0-doc,
-               libgegl-dev (>= 0.3.0),
+               libgegl-dev (>= 0.3.30),
                libgtk2.0-dev (>= 2.24.10),
                libgtk2.0-doc,
-               libgdk-pixbuf2.0-dev (>= 2.24.1),
+               libgdk-pixbuf2.0-dev (>= 2.30.8),
                libgdk-pixbuf2.0-doc,
                libgs-dev,
                libgudev-1.0-dev (>= 167) [linux-any],
                libice-dev,
                libjpeg-dev,
-               liblcms2-dev (>= 2.2),
+               liblcms2-dev (>= 2.8),
                libmng-dev,
+               libmypaint-dev (>= 1.3.0),
+               libopenexr-dev (>= 1.6.1),
+               libopenjp2-7-dev (>= 2.1.0),
                libpango1.0-dev (>= 1.29.4),
-               libpng-dev,
-               libpoppler-glib-dev (>= 0.12.4),
+               libpng-dev (>= 1.6.25),
+               libpoppler-glib-dev (>= 0.44.0),
                librsvg2-dev (>= 2.14.0),
                libsm-dev,
                libtiff-dev,
+               libwebp-dev (>= 0.6.0),
                libwmf-dev (>= 0.2.8),
                libx11-dev,
                libxcursor-dev,
@@ -47,7 +54,9 @@ Build-Depends: debhelper (>= 11),
                libxpm-dev,
                libxt-dev,
                zlib1g-dev,
+               mypaint-brushes,
                patchutils,
+               python-cairo-dev (>= 1.0.2),
                python-dev (>= 2.6.6-3),
                python-gtk2-dev (>= 2.10.4),
                xsltproc
