--- a/debian/rules
+++ b/debian/rules
@@ -35,11 +35,13 @@ override_dh_makeshlibs:
 	dh_makeshlibs -X/usr/lib/gimp/2.0/modules -- -c4
 
 override_dh_python2:
-	dh_python2 -pgimp /usr/lib/gimp/2.0/python
+	dh_python2 -pgimp-python /usr/lib/gimp/2.0/python
 
 override_dh_install:
 	find debian/tmp -name '*.la' -print -delete
 	dh_install
+	find debian/gimp -name '*.py' -print -delete
+	find debian/gimp -name 'pygimp.*' -print -delete
 
 override_dh_missing:
 	dh_missing --fail-missing
