--- a/debian/rules
+++ b/debian/rules
@@ -43,4 +43,4 @@ override_dh_install:
 	dh_install
 
 override_dh_missing:
-	dh_missing --fail-missing
+	dh_missing --fail-missing -Xgimp-debug-tool-2.0
