--- a/debian/rules
+++ b/debian/rules
@@ -15,7 +15,7 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 # third-party add-ons
 override_dh_auto_configure:
 	dh_auto_configure -- \
-		--libdir=/usr/lib
+		--libdir=/usr/lib \
 		--disable-static \
 		--enable-python \
 		PYTHON=/usr/bin/`pyversions -d` \
