--- a/debian/rules
+++ b/debian/rules
@@ -21,6 +21,7 @@ override_dh_auto_configure:
 		PYTHON=/usr/bin/`pyversions -d` \
 		--enable-default-binary \
 		--enable-gtk-doc \
+		--without-appdata-test \
 		--without-webkit
 
 override_dh_autoreconf:
