--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -2,3 +2,12 @@
 pristine-tar = True
 debian-branch = debian/master
 upstream-branch = upstream/latest
+
+[buildpackage]
+sign-tags = True
+
+[import-orig]
+postimport = dch -v%(version)s New upstream release; git add debian/changelog; debcommit
+
+[pq]
+patch-numbers = False
