--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Section: graphics
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: Hideki Yamane <henrich@debian.org>, Jeremy Bicha <jbicha@debian.org>, Jordi Mallach <jordi@debian.org>, Ari Pollak <ari@debian.org>
 Build-Depends: debhelper (>= 11),
+               desktop-file-utils <!nocheck>,
                dh-python,
                gegl (>= 0.4.2),
                gettext,
@@ -37,6 +38,7 @@ Build-Depends: debhelper (>= 11),
                libgdk-pixbuf2.0-doc,
                libgs-dev,
                libgudev-1.0-dev (>= 167) [linux-any],
+               libheif-dev (>= 1.1.0),
                libice-dev,
                libjpeg-dev,
                liblcms2-dev (>= 2.8),
