--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Source: gimp
 Priority: optional
 Section: graphics
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
-Uploaders: Hideki Yamane <henrich@debian.org>, Jeremy Bicha <jbicha@debian.org>, Jordi Mallach <jordi@debian.org>, Ari Pollak <ari@debian.org>
+Uploaders: Hideki Yamane <henrich@debian.org>, Jeremy Bicha <jbicha@debian.org>, Ari Pollak <ari@debian.org>
 Build-Depends: debhelper (>= 11),
                desktop-file-utils <!nocheck>,
                dh-python,
@@ -67,6 +67,7 @@ Build-Depends: debhelper (>= 11),
                python-gtk2-dev (>= 2.10.4),
                xsltproc
 Standards-Version: 4.1.4
+X-Ubuntu-Use-Langpack: yes
 Vcs-Git: https://salsa.debian.org/gnome-team/gimp.git
 Vcs-Browser: https://salsa.debian.org/gnome-team/gimp
 Homepage: https://www.gimp.org/
