--- a/debian/control.in
+++ b/debian/control.in
@@ -63,6 +63,7 @@ Build-Depends: debhelper (>= 11),
                python-gtk2-dev (>= 2.10.4),
                xsltproc
 Standards-Version: 4.1.4
+X-Ubuntu-Use-Langpack: yes
 Vcs-Git: https://salsa.debian.org/gnome-team/gimp.git
 Vcs-Browser: https://salsa.debian.org/gnome-team/gimp
 Homepage: https://www.gimp.org/
