debian/gbp.conf: correctly set upstream-vcs-tag

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -2,9 +2,7 @@
 pristine-tar = True
 debian-branch = debian/master
 upstream-branch = upstream/latest
-# Use gbp import-orig --uscan --upstream-vcs-tag=GIMP_2_10_6
-# for instance when upgrading to 2.10.6. See https://bugs.debian.org/908316
-upstream-vcs-tag = invalid
+upstream-vcs-tag = GIMP_%(version%.%_)s
 
 [buildpackage]
 sign-tags = True
